# FileSystemAnalyser

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py  dir_traversial.py  file.py  large_file_identifier.py  main.py  service.py
src/categorizers/: simple_categorizer.py  single_file_categorizer.py  type_categoryzer.py
src/categorizers/categories/: category.py  executable_categorizer.py  image_categorizer.py  text_categorizer.py  video_categorizer.py
src/checkers/: checker.py  parallel_permission_checker.py  parallel_symlink_checker.py  permission_checker.py  symlink_checker.py
src/enums/: file_category.py  file_type.py
src/file_permission_report/: file_permission_report.py  group_writable_permission.py  odd_permission.py  world_executable_permission.py  world_writable_permission.py
src/traversals/: parallel_traversal.py  standard_dir_traversal.py  traversal.py
tests/: test_categorizers.py  test_dir_traversial.py  test_large_files_identifier.py
