[project]
name = "filesystemanalyser"
version = "0.1.0"
description = ""
authors = [
    {name = "Archil",email = "azhgh22@freeuni.edu.ge"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "fs (>=2.4.16,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
